--- a/month_02/week_06/session_17.html/box/box.html
+++ b/month_02/week_06/session_17.html/box/box.html
@@ -27,5 +27,7 @@
         <div class="shadow5"></div>
         <div class="shadow6"></div>
     </div>
+    <div class="box5">
+        <div class="tet6" >This is a content box with a vertical words of boxes</div>
 </body>
 </html>
